--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h4 class="my-0 fw-normal">Chihuahua</h4>
           </div>
           <div class="card-body">
-            <h3 class="card-title pricing-card-title">$0<small class="text-body-secondary fw-light">/mo</small></h3>
+            <h3 class="card-title pricing-card-title">Rs 00/<small class="text-body-secondary fw-light">/mo</small></h3>
             <ul class="list-unstyled mt-3 mb-4">
               <li>5 Matches Per Day</li>
               <li>10 Messages Per Day</li>
@@ -177,7 +177,7 @@
             <h4 class="my-0 fw-normal">Labrador</h4>
           </div>
           <div class="card-body">
-            <h3 class="card-title pricing-card-title">$15<small class="text-body-secondary fw-light">/mo</small></h3>
+            <h3 class="card-title pricing-card-title">Rs 1500/<small class="text-body-secondary fw-light">/mo</small></h3>
             <ul class="list-unstyled mt-3">
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
@@ -194,7 +194,7 @@
             <h4 class="my-0 fw-normal">Mastiff</h4>
           </div>
           <div class="card-body">
-            <h3 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h3>
+            <h3 class="card-title pricing-card-title">Rs 2900/<small class="text-body-secondary fw-light">/mo</small></h3>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Pirority Listing</li>
               <li>Unlimited Matches</li>
